--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
   "homepage": "https://github.com/kishorereddy-7/namaste-react-kishore#readme",
   "devDependencies": {
     "parcel": "^2.9.1",
-    "process": "^0.11.10"
+    "postcss": "^8.4.27",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.1"
   }
 }
